--- a/fusion-http/src/main/resources/reference.conf
+++ b/fusion-http/src/main/resources/reference.conf
@@ -3,6 +3,14 @@ fusion {
     host = "0.0.0.0"
     port = 8000
   }
+
+  http {
+    custom-media-types = [
+      "video/x-wmv;true;notcompressible;wmv",
+      "audio/x-m4a;true;notcompressible;m4a",
+      "audio/x-flac;true;notcompressible;flac"
+    ]
+  }
 }
 
 akka.http {
