--- a/fusion-http/src/main/resources/reference.conf
+++ b/fusion-http/src/main/resources/reference.conf
@@ -5,6 +5,10 @@ fusion {
   }
 
   http {
+    manage {
+      enable = true
+      terminate-timeout = 60s
+    }
     custom-media-types = [
       "video/x-wmv;true;notcompressible;wmv",
       "audio/x-m4a;true;notcompressible;m4a",
@@ -16,5 +20,16 @@ fusion {
 akka.http {
   client {
 
+  }
+}
+
+akka.management {
+  http {
+    hostname = "127.0.0.1"
+    //port = 8558
+    base-path = "_management"
+    route-providers += "fusion.http.management.FusionManagementRoutes"
+    route-providers += "akka.management.HealthCheckRoutes"
+    route-providers-read-only = true
   }
 }
