--- a/fusion-http/src/main/resources/fusion-http.conf
+++ b/fusion-http/src/main/resources/fusion-http.conf
@@ -26,10 +26,14 @@ akka.http {
 akka.management {
   http {
     hostname = "127.0.0.1"
-    //port = 8558
+    //port = 8559
     base-path = "_management"
     route-providers += "fusion.http.management.FusionManagementRoutes"
     route-providers += "akka.management.HealthCheckRoutes"
     route-providers-read-only = true
+  }
+  health-checks {
+    readiness-path = "health/ready"
+    liveness-path = "health/alive"
   }
 }
