--- a/fusion-kafka/src/test/resources/application.conf
+++ b/fusion-kafka/src/test/resources/application.conf
@@ -2,12 +2,12 @@ fusion.data {
   kafka {
     producer {
       kafka-clients {
-        bootstrap.servers = "192.168.31.98:9092"
+        bootstrap.servers = "localhost:9092"
       }
     }
     consumer {
       kafka-clients {
-        bootstrap.servers = "192.168.31.98:9092"
+        bootstrap.servers = "localhost:9092"
       }
     }
   }
